name:                fastpbkdf2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adinapoli/fastpbkdf2-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           2016 Alfredo Di Napoli
category:            Cryptography
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  c-sources:           cbits/fastpbkdf2.c
  include-dirs:        include
                       include/openssl
  extra-lib-dirs:      /usr/local/opt/openssl/lib
  extra-libraries:     crypto
  exposed-modules:     Crypto.KDF.PBKDF2
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.4.0
  default-language:    Haskell2010

test-suite fastpbkdf2-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , fastpbkdf2 -any
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fastpbkdf2-hs
